--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     left: 0;
     width: 100%;
     padding: 20px 10%;
-    background: transparent;
+    background: rgba(0, 0, 0, 0.9);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -55,10 +55,12 @@ body {
     display: flex;
     align-items: center;
     color: #fff !important;
+    margin-right: auto; /* Pushes the brand to the left */
 }
 
 .navbar-nav {
-    margin-left: auto;
+    margin-left: 0;
+    margin-right: 100px; /* Adds some space between brand and links */
 }
 
 .navbar-nav .nav-item .nav-link.active {
