--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
 .home{
     height: 100vh;
     display: flex;
-    background: url('bgimg.jpg') no-repeat;
+    background: url('bgimg3.jpg') no-repeat;
     background-size: cover;
     background-position: center;
     align-items: center;
