--- a/style.css
+++ b/style.css
@@ -10,7 +10,10 @@
 body {
     color: #8c8c8c;
     background-color: #081b29; /* Set background color */
-    background: url('bgimg.svg') repeat-x center center/cover; /* Set background image with cover property */
+    background-image: url('bgimg.svg');
+    background-repeat: repeat-x;
+    background-position: center center;
+    background-size: cover;
 }
 
 .header {
