--- a/style.css
+++ b/style.css
@@ -67,8 +67,6 @@ body {
     margin-right: 20px; /* Adds some space between navbar items and edge of the screen */
 }
 
-/* Rest of your CSS styles remain the same */
-
 
 .navbar-nav .nav-item .nav-link.active {
     color: #315473 !important;
@@ -101,11 +99,9 @@ body {
     display: flex;
     background: #000;
     background: url('bgimg.svg') repeat-x;
-    background-size:auto ;
-    background-position: center;
+    background-size:cover;
     align-items: center;
     padding: 0 10%;
-
 }
 .home-content{
     max-width: 1000px;
@@ -121,7 +117,7 @@ body {
 .home-content h3{
     font-size: 32px;
     font-weight: 700;
-    color:#315473;
+    color:#51319c;
 }
 .home-content p{
     text-align: justify;
