--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .header .navbar .nav-link:hover {
-    color: #315473;
+    color: #51319c;
 }
 
 .logo {
@@ -69,7 +69,7 @@ body {
 
 
 .navbar-nav .nav-item .nav-link.active {
-    color: #315473 !important;
+    color: #51319c !important;
 }
 
 .navbar-nav .nav-item .nav-link.active:hover {
@@ -77,7 +77,7 @@ body {
 }
 
 .navbar-brand:hover {
-    color: #315473 !important;
+    color: #51319c !important;
 }
 
 .navbar a {
@@ -91,7 +91,7 @@ body {
 
 .navbar a:hover,
 .navbar a.active {
-    color: #315473;
+    color: #51319c;
 }
 
 .home{
@@ -141,8 +141,8 @@ body {
     align-items: center;
     width: 150px;
     height: 100%;
-    background:#315473;
-    border: 2px solid#315473;
+    background:#51319c;
+    border: 2px solid#51319c;
     border-radius: 8px;
     font-size: 19px;
     color: #081b29;
@@ -159,16 +159,16 @@ body {
 }
 
 .btn-box a:hover{
-    color:#315473;
+    color:#51319c;
 }
 
 .btn-box a
 {
     background: transparent;
-    color:#315473;
+    color:#51319c;
 }
 .btn-box a::before{
-    background:#315473;
+    background:#51319c;
 }
 
 .btn-box a:hover{
@@ -235,7 +235,7 @@ body {
     left: 0;
     width: 0;
     height: 100%;
-    background:#315473;
+    background:#51319c;
     z-index: -1;
     transition: .5s;
     -webkit-transition: .5s;
